# adafruit-pyportal-workspace

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  README.md  cliff.toml  go.work  go.work.sum
.cargo/: config.toml
.github/: CODEOWNERS
.github/citools/: rust-install-deps.sh  tinygo-install-deps.sh
.github/workflows/: gh-actions.yaml  rust.yaml  tinygo.yaml
arduino/: .arduino-cli.yaml  .arduino-fqbn.conf  README.md  tool-compile
arduino/helloworld/: helloworld.ino
circuitpython/: README.md
circuitpython/adafruit-ble-demo/: code.py
circuitpython/adafruit-quote-demo/: code.py
circuitpython/adafruit-quote-demo/lib/: adafruit_bme680.mpy  adafruit_mlx90393.mpy  adafruit_mlx90640.mpy
circuitpython/adafruit-quote-demo/lib/adafruit_airlift/: __init__.mpy  esp32.mpy
circuitpython/adafruit-quote-demo/lib/adafruit_mcp2515/: __init__.mpy
circuitpython/helloworld/: code.py
rust/: README.md
rust/helloworld/: Cargo.toml
rust/helloworld/examples/: adafruit_kb2040_bare_minimum.rs  adafruit_kb2040_rainbow.rs  adafruit_kb2040_usb_serial.rs
tinygo/: README.md  env-setup.sh  go.work  pyportal.json  start-editor
tinygo/helloworld/: go.mod  go.sum  helloworld.go  pyportal.json
wippersnapper/: README.md
