[workspace]
resolver = "2"
members = ["rust/helloworld"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
arrayvec = { version = "0.7.4", default-features = false }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
critical-section = "1.1.2"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-sdmmc = "0.5.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = ["unproven", ] }
fugit = "0.3.7"
hd44780-driver = "0.4.0"
heapless = "0.8.0"
i2c-pio = "0.8.0"
nb = "1.1"
panic-halt= "0.2.0"
panic-probe = "0.3.1"
pio = "0.2.1"
pio-proc = "0.2.2"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.10.1"
smart-leds = "0.3.0"
ssd1306 = "0.7.1"
st7735-lcd = "0.8.1"
st7789 = "0.6.1"
usb-device = "0.3.2"
usbd-hid = "0.7.0"
usbd-serial = "0.2.2"
ws2812-pio = "0.8.0"
